Fix bad center styling
- I made this new rule without testing it, somehow? It totally messed up
  the width of elements, not sure why doing that even causes the width
  to change...

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -343,10 +343,6 @@ div.flex-center {
     justify-content: center;
 }
 
-div.flex-center.flex-column {
-    align-items: center;
-}
-
 div.flex-controls {
     width: 80%;
     margin: 1rem auto;
